@@ -266,6 +266,56 @@ who\"
         c.write_to_file(f)
         self.assertEqual(b'[xandikos]\n\tcolor = "#665544"\n', f.getvalue())
 
+    def test_windows_path_with_trailing_backslash_unquoted(self) -> None:
+        """Test that Windows paths ending with escaped backslash are handled correctly."""
+        # This reproduces the issue from https://github.com/jelmer/dulwich/issues/1088
+        # A single backslash at the end should actually be a line continuation in strict Git config
+        # But we want to be more tolerant like Git itself
+        cf = self.from_file(
+            b'[core]\n\trepositoryformatversion = 0\n[remote "origin"]\n\turl = C:/Users/test\\\\\n\tfetch = +refs/heads/*:refs/remotes/origin/*\n'
+        )
+        self.assertEqual(b"C:/Users/test\\", cf.get((b"remote", b"origin"), b"url"))
+        self.assertEqual(
+            b"+refs/heads/*:refs/remotes/origin/*",
+            cf.get((b"remote", b"origin"), b"fetch"),
+        )
+
+    def test_windows_path_with_trailing_backslash_quoted(self) -> None:
+        """Test that quoted Windows paths with escaped backslashes work correctly."""
+        cf = self.from_file(
+            b'[core]\n\trepositoryformatversion = 0\n[remote "origin"]\n\turl = "C:\\\\Users\\\\test\\\\"\n\tfetch = +refs/heads/*:refs/remotes/origin/*\n'
+        )
+        self.assertEqual(b"C:\\Users\\test\\", cf.get((b"remote", b"origin"), b"url"))
+        self.assertEqual(
+            b"+refs/heads/*:refs/remotes/origin/*",
+            cf.get((b"remote", b"origin"), b"fetch"),
+        )
+
+    def test_single_backslash_at_line_end_shows_proper_escaping_needed(self) -> None:
+        """Test that demonstrates proper escaping is needed for single backslashes."""
+        # This test documents the current behavior: a single backslash at the end of a line
+        # is treated as a line continuation per Git config spec. Users should escape backslashes.
+
+        # This reproduces the original issue - single backslash causes line continuation
+        cf = self.from_file(
+            b'[remote "origin"]\n\turl = C:/Users/test\\\n\tfetch = +refs/heads/*:refs/remotes/origin/*\n'
+        )
+        # The result shows that line continuation occurred
+        self.assertEqual(
+            b"C:/Users/testfetch = +refs/heads/*:refs/remotes/origin/*",
+            cf.get((b"remote", b"origin"), b"url"),
+        )
+
+        # The proper way to include a literal backslash is to escape it
+        cf2 = self.from_file(
+            b'[remote "origin"]\n\turl = C:/Users/test\\\\\n\tfetch = +refs/heads/*:refs/remotes/origin/*\n'
+        )
+        self.assertEqual(b"C:/Users/test\\", cf2.get((b"remote", b"origin"), b"url"))
+        self.assertEqual(
+            b"+refs/heads/*:refs/remotes/origin/*",
+            cf2.get((b"remote", b"origin"), b"fetch"),
+        )
+
 
 class ConfigDictTests(TestCase):
     def test_get_set(self) -> None:
